--- a/run/http/Dockerfile
+++ b/run/http/Dockerfile
@@ -1,9 +1,4 @@
-FROM nginx:1.16
-RUN apt-get update \
- && apt-get -y --no-install-recommends dist-upgrade \
- && apt-get -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false purge \
- && rm -rf /var/lib/apt/lists/*
-RUN chmod -R 0777 /var/cache/nginx
-EXPOSE 8081
+FROM nginx:1.17-alpine
+EXPOSE 8080
 STOPSIGNAL SIGTERM
 CMD [ "nginx", "-g", "daemon off;" ]
