--- a/run/http/default.conf
+++ b/run/http/default.conf
@@ -1,12 +1,30 @@
 server{
-  listen 8080 default_server;
-  server_name _;
-  root /app;
-  index index.html index.htm;
-  client_max_body_size 100M;
-  error_page 404 /index.html;
 
-  location / {
-    try_files $uri /index.html$is_args$args;
-  }
+	listen 8080 default_server;
+	server_name _;
+	root /app;
+	index index.html index.htm;
+	client_max_body_size 100M;
+	error_page 404 /index.html;
+
+	location / {
+		try_files $uri /index.html$is_args$args;
+	}
+
+	location /_session {
+		proxy_pass http://${COUCH_HOST}:${COUCH_PORT}/_session;
+		proxy_redirect off;
+		proxy_buffering off;
+		proxy_set_header Host $host;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	}
+
+	location ~ ^/db/(?<database>products|orders) {
+		proxy_pass http://${COUCH_HOST}:${COUCH_PORT}/$database;
+		proxy_redirect off;
+		proxy_buffering off;
+		proxy_set_header Host $host;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	}
+
 }
