--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ${HTTP_PORT}:8080
     networks:
       - default
+      - backend
     depends_on:
       - couch
     links:
@@ -34,4 +35,9 @@ services:
       - COUCHDB_PASSWORD=${COUCH_PASSWORD}
       - COUCHDB_USER=${COUCH_USER}
     networks:
-      - default
+      - backend
+
+networks:
+  backend:
+    ipam:
+      driver: default
