--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "polygon2",
+  "name": "couch",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "core-js": "^3.3.2",
     "pouchdb-adapter-http": "^7.1.1",
     "pouchdb-adapter-idb": "^7.1.1",
+    "pouchdb-authentication": "^1.1.3",
     "register-service-worker": "^1.6.2",
     "rxdb": "^8.7.2",
     "vue": "^2.6.10",
@@ -40,7 +41,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
