--- a/run/http/default.conf
+++ b/run/http/default.conf
@@ -19,7 +19,7 @@ server{
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
 
-	location ~ ^/db/(?<database>products|orders) {
+	location ~ ^/(?<database>products|orders) {
 		proxy_pass http://${COUCH_HOST}:${COUCH_PORT}/$database;
 		proxy_redirect off;
 		proxy_buffering off;
