node is privileged

--- a/run/cli.yml
+++ b/run/cli.yml
@@ -4,6 +4,7 @@ services:
     build: ./node
     restart: always
     container_name: ${NODE_HOST}
+    privileged: true
     working_dir: /app
     user: ${CURRENT_UID}
     command: npm run serve
