--- a/run/couch/chttpd.ini
+++ b/run/couch/chttpd.ini
@@ -1,11 +1,15 @@
 [chttpd]
-require_valid_user = true
+require_valid_user = false
 bind_address = 0.0.0.0
 port = 5984
 
 [couch_httpd_auth]
 allow_persistent_cookies = true
-require_valid_user = true
+require_valid_user = false
 public_fields = firstname, lastname, email
 users_db_public = true
 secret = 37d63d7edef35e0a8e339be26418b02e
+
+[httpd]
+x_forwarded_host = :authority:
+x_forwarded_proto = :scheme:
